# CrypTAK

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  ENCRYPTION.md  LICENSE  MESHMONITOR_FORK_PLAN.md  PHASE2_STAGING.md  README.md  relay-sites.kml
app/: build.gradle  proguard-gradle.txt
docs/: architecture-takmap.md  architecture.md  claude-code-context.md  deployment-runbook.md  field-unit.md  halow-field-kit.md  hardware-builds.md  network-architecture.md  node-types.md  security.md
firmware/: README.md  nodes.yaml  provision.sh  secrets.sh.example  upgrade-iff.sh
libcodec2-android/: build.gradle
meshmonitor-integration/: README.md  docker-compose.yml
models/: build.gradle
phone-provision/: post-provision.sh  provision-phone.sh  test-provision.sh
server/incident-tracker/: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt
server/incident-tracker/src/: config.py  dedup.py  main.py  models.py
server/incident-tracker/src/analysis/: ai_analyzer.py  geocoder.py  keyword_filter.py
server/incident-tracker/src/cot/: builder.py  fts_client.py
server/incident-tracker/src/sources/: base.py  dc_crime.py  nws.py  reddit.py  rss.py  stopice.py  usgs.py  waze.py
server/incident-tracker/tests/: conftest.py  test_ai_analyzer.py  test_config.py  test_cot_builder.py  test_dc_crime_source.py  test_dedup.py  test_fts_client.py  test_geocoder.py  test_keyword_filter.py  test_main.py  test_nws_source.py  test_reddit_source.py  test_rss_source.py  test_stopice_source.py  test_usgs_source.py  test_waze_source.py
(+204 files in other folders)
