[project]
name = "cryptak-incident-tracker"
version = "0.1.0"
description = "Incident monitoring service for CrypTAK — polls data sources, filters, and injects CoT markers into FreeTAKServer"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
